--- a/src/scss/components/_schedules.scss
+++ b/src/scss/components/_schedules.scss
@@ -2,16 +2,6 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    position: relative;
-    &::after {
-        content: '';
-        width: 1px;
-        height: 100%;
-        background-color: var(--clr-primary);
-        position: absolute;
-        top: 0;
-        left: 50%;
-    }
     li {
         display: flex;
         gap: 1rem;
@@ -22,8 +12,11 @@
     }
     &__label {
         text-align: right;
-        padding-left: 5px;
         line-height: 1.25;
+        padding-left: 5px;
+        padding-right: 7.5px;
+        margin-right: -10.5px;
+        border-right: 2px solid #66776445;
     }
 }
 
